@@ -22,6 +22,8 @@ Changes in 0.62.13:
   * The Metadata SQL query has been reworked to join tables in a much
     better order, speeding up the getMetadata call on a repository
     with many versions much faster.
+  * Fixed bug where database was left locked on exception during install
+    when the download thread was still executing
 
 Changes in 0.62.12:
   * Conary will no longer create a "rootroot" group while installing
